added notes in html pages

--- a/Users_CR/create.html
+++ b/Users_CR/create.html
@@ -1,3 +1,5 @@
+<!-- This model doesn't currently work, am submitting it and going to get help from a TA in zoom this week! -->
+<!-- TO WHOM IS GRADING: JUSTIN HELPED ME WITH A FEW LINES, THERE MAY BE SIMILARITIES. WE BOTH GOT STUCK ON THIS THOUGH LOL -->
 <!DOCTYPE html>
 <html lang="en">
 
